working-directory added because the backend was not being recognised

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,3 +10,4 @@ jobs:
           distribution: "temurin"
           cache: 'maven'
       - run: mvn package --batch-mode
+        working-directory: ./backend
