--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -28,6 +28,9 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<sonar.organization>krisssssssssssssssssssssss</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.projectName>ChessProject_Capstone</sonar.projectName>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -85,6 +88,25 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>3.1.2</version>
 				</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.12</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			</plugins>
 	</build>
 
