--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -30,6 +30,7 @@
 		<java.version>21</java.version>
 		<sonar.organization>krisssssssssssssssssssssss</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.projectName>ChessProject_Capstone</sonar.projectName>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -69,7 +70,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>app</finalName>
+		<finalName>ChessProject_Capstone</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
