--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -70,7 +70,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>ChessProject_Capstone</finalName>
+		<finalName>app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
