--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=backend
 spring.data.mongodb.uri=${MONGODB_URI}
+spring.security.oauth2.client.registration.github.client-id=${ID_GITHUB}
+spring.security.oauth2.client.registration.github.client-secret=${OAUTH_SECRET_GITHUB}
+spring.security.oauth2.client.registration.github.scope=none
+app.url=${APP_URL}
