Tests for mocking user added

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -1,4 +1,5 @@
 de.flapdoodle.mongodb.embedded.version=7.0.4
 spring.security.oauth2.client.registration.github.client-id=1212412
 spring.security.oauth2.client.registration.github.client-secret=asfasfsaf
+spring.security.oauth2.client.registration.github.scope=none
 app.url=http://localhost:5173
