--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "react": "^18.3.1",
+    "react-chessboard": "^4.7.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
   },
